--- a/public/index.html
+++ b/public/index.html
@@ -203,7 +203,8 @@
               </div>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
@@ -420,7 +421,8 @@
               </div>
             </div>
           </div>
-        </div><!-- end of .container-->
+        </div>
+        <!-- end of .container-->
 
       </section>
       <!-- <section> close ============================-->
